Fixed scrollbar corner background color

--- a/src/ui/controls.scss
+++ b/src/ui/controls.scss
@@ -58,7 +58,7 @@ $listcell-border: $listheader-border;
     background-clip: padding-box;
     border: solid 4px $scrollbar-background;
 }
-  
+
 ::-webkit-scrollbar-button {
     width: 17px;
     height: 13px;
@@ -66,6 +66,10 @@ $listcell-border: $listheader-border;
 }
   
 ::-webkit-scrollbar-track {
+    background-color: $scrollbar-background;
+}
+
+::-webkit-scrollbar-corner {
     background-color: $scrollbar-background;
 }
 
